--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,13 @@
 apply plugin: 'com.android.application'
+buildscript {
+    repositories {
+        jcenter()
+    }
 
+    dependencies {
+        classpath 'com.android.tools.build:gradle:2.2.0'
+    }
+}
 android {
     compileSdkVersion 23
     buildToolsVersion "24.0.0"
@@ -21,7 +29,6 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.android.support:cardview-v7:23.4.0'
